# wl-client

./: Cargo.toml  README.md
wl-client/: Cargo.toml  release-notes.md
wl-client-builder/: Cargo.toml  README.md
wl-client-builder-cli/: Cargo.toml  README.md
wl-client-builder-cli/src/: main.rs
wl-client-builder/src/: ast.rs  builder.rs  formatter.rs  lib.rs  parser.rs
wl-client/examples/async-roundtrip/: main.rs
wl-client/examples/async-wait/: main.rs
wl-client/examples/async-window/: main.rs
wl-client/examples/common/: mod.rs  simple_window.rs  singletons.rs
wl-client/examples/common/protocols_data/: mod.rs  tablet_v2.rs
wl-client/examples/get-registry/: main.rs
wl-client/examples/get-registry-with-data/: main.rs
wl-client/examples/hello-wayland/: main.rs
wl-client/examples/keyboard-events/: main.rs
wl-client/examples/poll-integration/: main.rs
wl-client/examples/simple-window/: main.rs
wl-client/src/: builder.rs  connection.rs  ffi.rs  fixed.rs  lib.rs  libwayland.rs  libwayland_test.rs  proxy.rs  queue.rs  test_protocol_helpers.rs  tests.rs  tests_with_data.rs  utils.rs
wl-client/src/builder/: helpers.rs  prelude.rs
wl-client/src/builder/helpers/: tests.rs
wl-client/src/connection/: flush.rs  read_lock.rs  tests.rs  wait_for_events.rs
wl-client/src/connection/flush/: tests.rs
wl-client/src/connection/read_lock/: tests.rs
wl-client/src/connection/wait_for_events/: tests.rs
wl-client/src/ffi/: tests.rs
wl-client/src/fixed/: tests.rs
wl-client/src/protocols/: mod.rs  wayland.rs
wl-client/src/protocols/wayland/: wl_callback.rs  wl_display.rs  wl_registry.rs
wl-client/src/proxy/: low_level.rs  tests.rs
wl-client/src/proxy/low_level/: borrowed.rs  owned.rs  tests.rs
wl-client/src/queue/: tests.rs  with_data.rs
wl-client/src/queue/with_data/: tests.rs
wl-client/src/test_protocols/core/: wl_callback.rs  wl_display.rs  wl_dummy.rs  wl_keyboard.rs  wl_registry.rs  wl_root.rs  wl_seat.rs  wl_string.rs  wl_surface.rs
wl-client/src/test_protocols_data/: core.rs  mod.rs
wl-client/src/test_protocols_data/core/: wl_display.rs  (+8 more)
wl-client/src/utils/: block_on.rs  eventfd.rs  executor.rs  on_drop.rs  os_error.rs  poller.rs  reentrant_mutex.rs  sync_cell.rs  sync_ptr.rs  thread_id.rs
(+103 files in other folders)
