[package]
name = "wl-client-builder-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahkoh/wl-client"
description = "CLI for creating protocol bindings for wl-client"
keywords = ["cli", "protocol", "linux", "wayland"]
categories = ["api-bindings", "command-line-utilities", "parser-implementations"]

[[bin]]
name = "wl-client-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
wl-client-builder = { version = "0.1.0", path = "../wl-client-builder" }
error_reporter = "1.0.0"
