[package]
name = "wl-client-builder"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahkoh/wl-client"
description = "Library for creating protocol bindings for wl-client"
keywords = ["protocol", "linux", "wayland", "api"]
categories = ["api-bindings", "parser-implementations"]

[dependencies]
quick-xml = "0.37.2"
thiserror = "2.0.12"
debug-fn = "1.0.0"
phf = { version = "0.11.3", features = ["macros"] }
